--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,6 @@
 
 .removing {
   animation: fadeOut 0.5s forwards;
-  /* Fade out effect */
 }
 
 @keyframes fadeOut {
@@ -61,9 +60,7 @@ button {
 }
 
 
-
-
-/* Modal Styles */
+/* Modal */
 .modal {
   position: fixed;
   top: 0;
@@ -149,7 +146,6 @@ button {
   background-size: contain;
   height: 60%;
   background-position: -70px bottom;
-  /* background-position: center; */
 }
 
 .speech-bubble-cartoon {
