--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,10 @@
 
 .button-container {
   display: flex;
+  width: 100%;
   gap: 10px;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
 .row {
